ingresa presentes al pozo

--- a/app/src/main/res/layout/activity_second.xml
+++ b/app/src/main/res/layout/activity_second.xml
@@ -201,7 +201,7 @@
                 android:layout_weight="1"
                 android:ems="10"
                 android:hint="ingrese C.I."
-                android:inputType="number" />
+                android:inputType="text" />
         </LinearLayout>
 
     </LinearLayout>
